# strategy-rag-test

./: .gitignore  EVALUATION_README.md  EVALUATION_TROUBLESHOOTING.md  VALUE_QUANTIFICATION_SUMMARY.md  check_database_status.py  check_database_status_simple.py  check_organization_names.py  compare_evaluation_methods.py  evaluation_analyzer.py  evaluation_framework.py  evaluation_framework_optimized.py  evaluation_report_20251018_000034.md  evaluation_results_20251018_000034.json  example-data-neo4j.json  fix_news_organization_links.py  fix_news_organization_links_corrected.py  ingest_10k_to_neo4j.py  ingest_news_to_neo4j.py  keyword_evaluation_20251018_142521.json  kg_query.py  main.py  my_sec_api_test.py  personal_graph_diary_rag_formal_specification_v_0.md  pyproject.toml  requirements.txt  run_evaluation.py  semantic_evaluation_20251018_142521.json  semantic_evaluation_framework.py  simple_evaluation.py  test_enhanced_query.py  test_news_ingestion.py  test_optimized_evaluation.py  test_semantic_analysis.py
10k/INTERNATIONAL_BUSINESS_MACHINES_CORP/2020/: 2020_10k.json  2020_10k_meta.json  2020_10k_primary.html  2020_10k_primary.txt
10k/INTERNATIONAL_BUSINESS_MACHINES_CORP/2021/: 2021_10k.json  2021_10k_meta.json  2021_10k_primary.html  2021_10k_primary.txt
10k/INTERNATIONAL_BUSINESS_MACHINES_CORP/2022/: 2022_10k.json  2022_10k_meta.json  2022_10k_primary.html  2022_10k_primary.txt
docs/: ENHANCED_QUERY_README.md  NEWS_INTEGRATION_README.md
inference/: answer-with-news.md
response/: query_8bdad00fa090fac0c3c6caf4ca6b73d4.json
(+8 files in other folders)
